# multithread-robot-simulation

./: README.md
main/: CMakeLists.txt
main/include/: robot.h  simulation.h  variables.h  world.h
main/src/: main.cpp  robot.cpp  simulation.cpp  world.cpp
results/: setup_tutorial.mov  simulacion_2_multithread.avi  simulacion_multithread.avi  simulacion_multithread.mov
